boot: Updated deprecated reflection stuff